--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile 'net.openhft:chronicle-network:1.0.5-alpha'
 
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testCompile 'cglib:cglib-nodep:3.1'
 }
 
 task wrapper(type: Wrapper) {
